--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.19.0
   path_provider: ^2.1.4
   syncfusion_flutter_pdfviewer: ^26.2.9
+  file_picker: ^8.1.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
